--- a/api/composer.json
+++ b/api/composer.json
@@ -5,7 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/api-pack": "^1.2",
+        "nelmio/api-doc-bundle": "^3.5",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.4.*",
         "symfony/console": "4.4.*",
