--- a/api/.env
+++ b/api/.env
@@ -31,3 +31,9 @@ APP_SECRET=50148e9e16fcafa827d5a01524c68584
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:root@mysql:3306/symfony-nuxt?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=8bf0d6c61967f02fb8c1b1ac15441bd5
+###< lexik/jwt-authentication-bundle ###
