--- a/docker/nginx/sites/api.conf
+++ b/docker/nginx/sites/api.conf
@@ -9,7 +9,7 @@ server {
     # ssl_certificate /etc/nginx/ssl/default.crt;
     # ssl_certificate_key /etc/nginx/ssl/default.key;
 
-    server_name symfony-nuxt.test;
+    server_name api.symfony-nuxt.test;
     root /var/www/api/public;
     index index.php index.html index.htm;
 
@@ -31,6 +31,6 @@ server {
         fastcgi_param HTTPS off;
     }
 
-    error_log /var/log/nginx/symfony-nuxt_error.log;
-    access_log /var/log/nginx/symfony-nuxt_access.log;
+    error_log /var/log/nginx/api-symfony-nuxt_error.log;
+    access_log /var/log/nginx/api-symfony-nuxt_access.log;
 }
